change logo about easy-openshift

--- a/views/public/login.html
+++ b/views/public/login.html
@@ -41,7 +41,7 @@
     <body class="login_page">
         <div class="login_page_bg">
             <div class="login_page_panel">
-                <h1 style="color: #fff;font-size: 40px;text-align:center;">定时任务管理</h1>
+                <h1 style="color: #fff;font-size: 40px;text-align:center;">Easy-Openshift</h1>
                 <form action="/login" method="post">
                     <div class="username">
                         <input type="text" name="username" id="username" class="box_sizing" autofocus="autofocus" autocomplete="off" placeholder="账号" required />
