--- a/views/public/layout.html
+++ b/views/public/layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-        <title>定时任务管理后台</title>
+        <title>Easy-Openshift 后台</title>
         <link href="/static/bootstrap/css/bootstrap.min.css" title="" rel="stylesheet" />
 
         <link title="" href="/static/css/style.css" rel="stylesheet" type="text/css"  />
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="li-border">
-                        <a class="mystyle-color" href="#" style="font-size: 20px">定时任务管理后台 <span style="font-size: 12px">V1.2</span></a>
+                        <a class="mystyle-color" href="#" style="font-size: 20px">Easy-Openshift 管理后台 <span style="font-size: 12px">V1.2</span></a>
                     </li>
                 </ul>
 
